added test functions for giphy and open weather apis

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1></h1>
 	<form class="form-to-search">
 		<input class="term-to-search" type="text">
-		<button  class ="to-search" type="submit">Search</button>
+		<button  class ="to-search" type="submit">Search Me </button>
 	</form>
 
 	<ul class="results-to-show">
