--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 		<button  class ="to-search" type="submit">Search Me </button>
 	</form>
 
-	<ul class="results-to-show">
-	</ul>
+	<div class="results-to-show">
+		
+	</div>
 
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="app.js"></script>
