form validation function added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 			</div>
 			<div class="results-to-show gifs hidden">
 			</div>
-			<form class="form-to-search">
-				<input class="term-to-search" type="text">
+			<form  class="form-to-search">
+				<input 
+				 class="term-to-search" type="text">
 				<button class="btn btn-primary btn-lg to-search" type="submit">Get GifCast</button>
 			</form>
 		</div>
