--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       </div>
     </div>
     <form class="form-to-search">
-      <input class="term-to-search" type="text">
+      <input class="term-to-search" type="text" placeholder="Zip code">
+      <br>
       <button class="btn btn-primary btn-lg to-search" type="submit">Get GifCast</button>
     </form>
 
